--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
-    "@payloadcms/next": "latest",
-    "@payloadcms/payload-cloud": "latest",
-    "@payloadcms/richtext-lexical": "latest",
+    "@payloadcms/db-postgres": "3.0.0-beta.122",
+    "@payloadcms/email-nodemailer": "3.0.0-beta.122",
+    "@payloadcms/next": "3.0.0-beta.122",
+    "@payloadcms/payload-cloud": "3.0.0-beta.122",
+    "@payloadcms/plugin-seo": "3.0.0-beta.122",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.122",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
     "next": "15.0.0",
-    "payload": "latest",
+    "payload": "3.0.0-beta.122",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "sharp": "0.32.6",
-    "@payloadcms/db-postgres": "latest"
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
